@@ -6,7 +6,6 @@ import dev.emi.emi.api.recipe.*;
 import dev.emi.emi.api.render.*;
 import dev.emi.emi.api.stack.*;
 import dev.emi.emi.api.widget.*;
-import net.minecraft.util.*;
 
 public class FluidConvertingEmiRecipeGated extends GatedSpectrumEmiRecipe<FluidConvertingRecipe> {
 	
@@ -18,7 +17,7 @@ public class FluidConvertingEmiRecipeGated extends GatedSpectrumEmiRecipe<FluidC
 	@Override
 	public void addUnlockedWidgets(WidgetHolder widgets) {
 		widgets.addTexture(EmiTexture.EMPTY_ARROW, 23, 4);
-		widgets.addSlot(inputs.get(0), 0, 4);
-		widgets.addSlot(outputs.get(0), 52, 0).large(true).recipeContext(this);
+		widgets.addSlot(inputs.getFirst(), 0, 4);
+		widgets.addSlot(outputs.getFirst(), 52, 0).large(true).recipeContext(this);
 	}
 }
