@@ -15,7 +15,7 @@ public class PotionWorkshopEmiRecipeGated extends GatedSpectrumEmiRecipe<PotionW
 	public PotionWorkshopEmiRecipeGated(EmiRecipeCategory category, PotionWorkshopRecipe recipe) {
 		super(category, recipe, 112, 66);
 		
-		this.inputs = recipe.getIngredientStacks().stream().map(s -> EmiIngredient.of(s.getStacks().stream().map(EmiStack::of).toList())).toList();
+		this.inputs = recipe.getIngredientStacks().stream().map(s -> EmiIngredient.of(s.getMatchingStacks().stream().map(EmiStack::of).toList())).toList();
 	}
 	
 	@Override
@@ -26,7 +26,7 @@ public class PotionWorkshopEmiRecipeGated extends GatedSpectrumEmiRecipe<PotionW
 		widgets.addSlot(inputs.get(3), 0, 24);
 		widgets.addSlot(inputs.get(4), 36, 24);
 		
-		widgets.addSlot(outputs.get(0), 94, 24).recipeContext(this);
+		widgets.addSlot(outputs.getFirst(), 94, 24).recipeContext(this);
 		
 		// bubbles
 		widgets.addTexture(BACKGROUND_TEXTURE, 21, 20, 11, 27, 176, 0);
